more padding and alignment fixes

--- a/assets/sass/cds/_base.scss
+++ b/assets/sass/cds/_base.scss
@@ -165,8 +165,13 @@ html .container {
 	width: 100%;
 }
 
+.col-md-9 {
+	margin: 0;
+	width: 75%;
+}
+
 .section {
-	padding: 2.5rem 0;
+	padding: 1rem 0;
 	position: relative;
 	z-index: 0;
 	margin: 0 auto;
