--- a/assets/sass/cds/_sections.scss
+++ b/assets/sass/cds/_sections.scss
@@ -325,7 +325,7 @@
 //
 ////////////////////////////////////////////////////
 .blogpost-list {
-  // padding: 0;
+  padding: 0;
   list-style: none;
   // display: flex;
   // flex-direction: row;
@@ -338,8 +338,8 @@
   }
 
   .post {
-    width: 90%;
-    margin-bottom: 30px;
+    // width: 90%;
+    // margin-bottom: 30px;
 
     @include sm_desktop_screen {
       width: 100%;
@@ -358,7 +358,7 @@
   .post-container {
     // background-color: #ffffff;
     // box-shadow: 5px 8px 5px #e1e4e7;
-    border-bottom: 3px solid #D6D9DD;
+    border-bottom: 2px solid #D6D9DD;
     // margin: 0 auto;
 
     @include tablet {
@@ -381,11 +381,6 @@
     }
   }
 
-  .author {
-    font-weight: 500;
-    font-size: 1.25rem;
-    margin-bottom: 0.7rem;
-  }
 
   .photo-container {
     height: 250px;
@@ -426,7 +421,7 @@
   }
 
   .author {
-    font-size: 0.78rem;
+    font-size: 1rem;
 
     @include tablet {
       // This rule will limit the number of lines to 3
@@ -441,6 +436,7 @@
   .summary {
     color: $icon-grey;
     font-size: 1rem;
+    margin-bottom: 1rem;
 
     @include tablet {
       // This rule will limit the number of lines to 5
@@ -537,10 +533,6 @@ article.post {
       font-weight: 500;
     }
 
-    .author {
-      display: block;
-      font-weight: 500;
-    }
   }
 }
 
@@ -707,10 +699,12 @@ article.post {
   padding-top: 2.78rem;
 
   h2 {
-    margin: 0.55rem 0 2.22rem 0;
+    font-weight: 600;
+    font-size: 2rem;
   }
 
   .first-list {
+    padding: 3rem 0 3rem 0;
     // display: flex;
     // justify-content: space-between;
     background-color: #D7E5F5;
@@ -721,6 +715,10 @@ article.post {
     ul li:before {
       content: '✓';
     }
+  }
+
+  .second-list {
+    padding: 3rem 0 3rem 0;
   }
 }
 
